@@ -22,8 +22,8 @@ public class BasePlayerStatContainer implements ISlashRegistryInit, IApplyableSt
         //base ones
 
         c.base(Health.getInstance(), 100);
-        c.base(HealthRegen.getInstance(), 2);
-        c.base(MagicShieldRegen.getInstance(), 2);
+        c.base(HealthRegen.getInstance(), 1.5F);
+        c.base(MagicShieldRegen.getInstance(), 1.5F);
         c.base(PhysicalDamage.getInstance(), 3);
         c.base(CriticalHit.getInstance(), 1);
         c.base(CriticalDamage.getInstance(), 0);
@@ -38,10 +38,8 @@ public class BasePlayerStatContainer implements ISlashRegistryInit, IApplyableSt
 
         c.scale(Health.getInstance(), 5);
         c.scale(HealthRegen.getInstance(), 1);
-        c.scale(MagicShieldRegen.getInstance(), 0.5F);
-        c.scale(PhysicalDamage.getInstance(), 0.3D);
-        //c.scale(Armor.getInstance(), 5);
-        //c.scale(SpellDamage.getInstance(), 0.25D);
+        c.scale(MagicShieldRegen.getInstance(), 0.4F);
+        c.scale(PhysicalDamage.getInstance(), 0.25D);
 
         return c;
 
